@@ -14,6 +14,7 @@ Version 1.0.0
 - Add ``dist`` field to Event.
 - Compressed JSON payloads are no longer base64 encoded.
 - Rename ``EventSendFailureCallback`` to ``EventSendCallback``, add ``onSuccess`` callback.
+- Add way to set release, environment, serverName, tags on ``SentryClient``.
 
 Version 8.0.2
 -------------
